--- a/00_structure_and_library.html
+++ b/00_structure_and_library.html
@@ -7,7 +7,10 @@
     </head>
     <body>
         <div id="app">
+          <!--
+          [[ HTML 태그들 ]]
 
+          -->
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/vue@2.5.2/dist/vue.js"></script> <!--Vue-->
@@ -81,9 +84,6 @@
               data: {
                 // 데이터의 property들 객체로 나열
               },
-              computed: { // data의 property들을 자동으로 계산해주는 property
-
-              },
               template: { // 화면에 표시할 HTML, CSS등의 마크업 요소를 정의하는 property (DOM요소들)
 
               },
@@ -92,6 +92,15 @@
               },
               components: { // 지역 컴포넌트에 관련된 property
                 // template properties 를 가지고 있음
+              },
+
+              // 고급 template 기법 - template은 단순한 화면 요소
+
+              computed: { // data의 property들을 자동으로 계산
+                // 내장 API를 이용하는 간단한 연산에 적합
+              },
+              watched: { // data 변화를 감지하여 자동으로 특정 로직을 수행
+                // 데이터 호출과 같이 시간이 상대적으로 많이 소요되는 비동기 처리에 적합
               },
 
               // Life Cycle 관련 properties
